Add Swagger documentation for auth api
